[BUGFIX] Remove visible inspector border in preview mode
Reviewed-on: https://review.typo3.org/22234
Tested-by: Aske Ertmann
Tested-by: Mr. Hudson
Tested-by: Christopher Hlubek
Original-Commit-Hash: 72a5360b37f0524ba59b347af33c4250314e6525

--- a/TYPO3.Neos/Resources/Private/Styles/_Global.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/_Global.scss
@@ -108,7 +108,7 @@ body {
 			}
 
 			#neos-inspector {
-				right: -$inspectorWidth;
+				right: -($inspectorWidth + 1px);
 				overflow: hidden;
 			}
 
