--- a/TYPO3.Neos/Resources/Public/Styles/Neos.css
+++ b/TYPO3.Neos/Resources/Public/Styles/Neos.css
@@ -12627,7 +12627,7 @@ body.neos-previewmode .neos #neos-context-bar {
   padding-right: 0;
 }
 body.neos-previewmode .neos #neos-inspector {
-  right: -320px;
+  right: -321px;
   overflow: hidden;
 }
 body.neos-previewmode .neos #neos-menu-panel,
